# crew-ai-gdal

./: README.md  crew.py  main.py
Desktop/crew_test2/: README.md  crew.py  main.py  pyproject.toml
Desktop/crew_test2/config/: agents.yaml  tasks.yaml
Desktop/crew_test2/src/: mcp_server.py
Desktop/crew_test2/src/crew_test2/: crew.py  main.py
Desktop/crew_test2/src/crew_test2/tools/: custom_tool.py
config/: agents.yaml  tasks.yaml
tools/: custom_tool.py
